test/library/packages/Crypto/saru/utils/buffer2.good
buffer2.chpl:1: In function 'main':
buffer2.chpl:5: error: Cannot assign to uint(8) from int(64)
